--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
+# macOS
+.DS_Store
+
+# Node 
 node_modules/
 dist/
+test-results/
 .playwright/
 .playwright-report/
 .env
+
+# Playwright
+.trace
