--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "strict": true,
     "outDir": "dist"
   },
-  "include": ["tests"],
+  "include": ["src", "tests"],
   "exclude": ["dist"]
 }
